Enhance HTML styling and add closing remarks
Updated styling and font in the HTML document, improved layout, and added closing paragraph.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
 <meta charset="UTF-8">
 <title>O meu percurso nos Salesianos de Lisboa</title>
 <style>
+    /* Fonte Aptos */
+    @font-face {
+        font-family: 'Aptos';
+        src: local('Aptos'), local('Aptos-Regular'), url('https://github.com/aptos-font/aptos/raw/main/fonts/ttf/Aptos-Regular.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+    }
+
     body {
-        font-family: aptos, aptos;
-        line-height: 1.6;
-        max-width: 800px;
+        font-family: 'Aptos', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+        background-color: #f0f4f8;
+        color: #1a1a1a;
+        line-height: 1.7;
+        max-width: 900px;
         margin: 50px auto;
         padding: 0 20px;
-        background-color: #f9f9f9;
-        color: #333;
     }
+
     h1 {
         text-align: center;
         margin-bottom: 40px;
+        color: #0a3d62;
     }
+
     p {
         margin-bottom: 20px;
         text-align: justify;
@@ -39,7 +50,9 @@
 
 <p>É verdade, temos tudo o que outrora desejávamos, mas parece insuficiente, até desnecessário. Realmente, é só aí que tudo fica claro, é durante a escola que vivemos pressionados, que mal temos tempo, que queremos fazer mais e melhor, mas aquilo que realmente faz tudo valer a pena, é o facto de passarmos cada dia, fácil ou difícil, rodeado das pessoas de que, precisamente por partilharem connosco todas estas dificuldades e desejos, mais gostamos: os nossos amigos. Não há ninguém a quem eu possa chamar irmão ou irmã, por isso o mais próximo que tenho é mesmo o 'mano' dirigido a todos aqueles que me gostam de ter por perto, porque não faria mais 5 temporadas, mais 1500 horas de inúmeros jogos, nem mais 800 almoços com alguém que não vocês. A verdadeira frustração é saber que só percebemos que o presente foi dos melhores momentos da nossa vida quando o tempo já o levou para longe, e o transformou em passado, só nos deixando uns restos a que chamamos nostalgia.</p>
 
-<p>Porque é só quando vamos para casa sozinhos que sentimos falta que os pais nos venham buscar; é só quando deixamos de ter uma disciplina chata que percebemos o quanto gostávamos dela; é só quando ficamos mais altos que os professores que aprendemos a vê-los como bons amigos; é só quando temos todas as tardes livres que sentimos falta de almoçar no bar com os amigos; é só quando a Matemática tem mais letras que números que nos lembramos da tabuada no canto da folha; Pois, porque é só quando escrevemos o testemunho que percebemos que o que parecia eterno está a chegar ao fim. Obrigado a todos, por me ajudarem a ser melhor.</p>
+<p>Porque é só quando vamos para casa sozinhos que sentimos falta que os pais nos venham buscar; é só quando deixamos de ter uma disciplina chata que percebemos o quanto gostávamos dela; é só quando ficamos mais altos que os professores que aprendemos a vê-los como bons amigos; é só quando temos todas as tardes livres que sentimos falta de almoçar no bar com os amigos; é só quando a Matemática tem mais letras que números que nos lembramos da tabuada no canto da folha; Pois, porque é só quando escrevemos o testemunho que percebemos que o que parecia eterno está a chegar ao fim.</p>
 
+<p>Obrigado a todos, por me ajudarem a ser melhor.</p>
+    
 </body>
 </html>
